# chemist-preprocessor

./: .dockerignore  .env.example  .gitignore  API-Endpoints.html  API-Error.html  API-Logger.html  API-Server.html  Dockerfile  Dockerfile.dev  Dockerfile.migration  Dockerfile.neo4j  Domain-Converter-Converter.html  Domain-Converter-Helpers.html  Domain-Converter-Instances.html  Domain-Converter-Type.html  Domain-Converter-Units-ToMechanismDetails.html  Domain-Converter-Units-ToPath.html  Domain-Converter-Units-ToRawReactionDetails.html  Domain-Converter-Units-ToReaction.html  Domain-Converter-Units-ToReactionDetails.html  Domain-Service.html  Infrastructure-Config.html  Infrastructure-Database.html  Infrastructure-QueryGenerator.html  Models-Chemical.html  Models-Common.html  Models-Graph.html  Models-Interactant.html  Models-Mask.html  Models-Mechanism.html  Models-Process.html  Models.html  README.md  README.txt  biocad.cabal  cabal.project.freeze  chemist-preprocessor.cabal  chemist-preprocessor.haddock  chemist.cabal  chemist.haddock  (+28 more)
.github/workflows/: haskell.yml
app/: Main.hs
examples/: .env.example
logs/Local/: error
logs/VirutalMachine/: healthy
migrations/: 001_db_initialization.cypher  001_init_db.cypher  002_add_ethanol_combustion.cypher  002_ethanol_combustion.cypher  003_water_synthesis.cypher  004_methane_combustion.cypher  005_ethene_hydration.cypher  006_propanol_oxidation.cypher  007_butane_cracking.cypher  008_acetone_oxidation.cypher  009_acetic_acid_fermentation.cypher  010_formaldehyde_polymerization.cypher  011_benzene_hydrogenation.cypher  012_ammonia_synthesis.cypher  013_sulfur_dioxide_oxidation.cypher  014_nitrogen_fixation.cypher  015_carbon_monoxide_conversion.cypher  016_hydrochloric_acid_production.cypher  017_ethanoic_acid_formation.cypher  018_glycine_synthesis.cypher  019_methanol_synthesis.cypher  020_hydrogen_peroxide_decomposition.cypher  021_butane_combustion.cypher  022_ethene_hydration_mechanism.cypher
scripts/: delete_reaction.sh  get_process.sh  migrate.sh  neo4j-entrypoint.sh  post_reaction.sh  wait-for-migrations.sh
scripts/api/: get_mechanism.sh  get_path.sh  get_process.sh  get_reactioin.sh  post_reaction.sh
src/: Config.hs  DataTypes.hs  Database.hs  Helpers.hs  Models.hs
src/API/: Endpoints.hs  Error.hs  Logger.hs  Server.hs  Type.hs
src/Domain/: Helpers.hs  Models.hs  Service.hs  Type.hs
src/Domain/Converter/: Converter.hs  Helpers.hs  Instances.hs  Type.hs
src/Domain/Converter/Units/: ToDetails.hs  ToDetailsSpec.hs  ToMechanismDetails.hs  ToMechanismDetailsSpec.hs  ToPath.hs  ToPathSpec.hs  ToRawDetails.hs  ToRawDetailsSpec.hs  ToRawReactionDetails.hs  ToRawReactionDetailsSpec.hs  ToReaction.hs  ToReactionDetails.hs  ToReactionDetailsSpec.hs  ToReactionSpec.hs
src/Infrastructure/: Config.hs  Database.hs  QueryGenerator.hs  Type.hs
src/Models/: Chemical.hs  Common.hs  Graph.hs  Interactant.hs  Mask.hs  Mechanism.hs  Process.hs
test/: Test.hs
test/Domain/Converter/Units/: ToMechanismDetailsSpec.hs  ToPathSpec.hs  ToRawReactionDetailsSpec.hs  ToReactionDetailsSpec.hs  ToReactionSpec.hs
