cabal-version: 3.6
name:          chemist-preprocessor
version:       0.1.0.0
synopsis:      Chemist Raw Data Preprocessor
author:        Λ
maintainer:    sobakavosne@gmail.com
category:      Database
homepage:      https://sobakavosne.github.io/chemist-preprocessor/

common shared-deps
  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , case-insensitive
    , containers
    , data-default
    , dotenv
    , extra
    , fast-logger
    , hasbolt
    , hspec
    , hspec-discover
    , http-types
    , mtl
    , servant-server
    , text
    , time
    , wai
    , warp

  default-language: Haskell2010
  ghc-options:      -Wall

library
  import:           shared-deps
  exposed-modules:
    API.Endpoints
    API.Error
    API.Logger
    API.Server
    Domain.Converter.Converter
    Domain.Converter.Helpers
    Domain.Converter.Instances
    Domain.Converter.Type
    Domain.Converter.Units.ToMechanismDetails
    Domain.Converter.Units.ToPath
    Domain.Converter.Units.ToRawReactionDetails
    Domain.Converter.Units.ToReaction
    Domain.Converter.Units.ToReactionDetails
    Domain.Service
    Infrastructure.Config
    Infrastructure.Database
    Infrastructure.QueryGenerator
    Models
    Models.Chemical
    Models.Common
    Models.Graph
    Models.Interactant
    Models.Mask
    Models.Mechanism
    Models.Process

  hs-source-dirs:   src
  default-language: Haskell2010

executable chemist-preprocessor
  import:           shared-deps
  main-is:          Main.hs
  build-depends:    chemist-preprocessor
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite chemist-preprocessor-test
  import:           shared-deps
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Spec.hs
  other-modules:
    Domain.Converter.Units.ToMechanismDetailsSpec
    Domain.Converter.Units.ToPathSpec
    Domain.Converter.Units.ToRawReactionDetailsSpec
    Domain.Converter.Units.ToReactionDetailsSpec
    Domain.Converter.Units.ToReactionSpec

  build-depends:    chemist-preprocessor
