cabal-version: 3.6
name:          chemist
version:       0.1.0.0
synopsis:      Chemist 
author:        Λ
maintainer:    sobakavosne@gmail.com
category:      Database

common shared-deps
  build-depends:
    , aeson
    , base
    , bytestring
    , case-insensitive
    , containers
    , data-default
    , dotenv
    , extra
    , fast-logger
    , hasbolt
    , hspec
    , http-types
    , mtl
    , servant-server
    , text
    , time
    , wai
    , warp

  -- , hasbolt-extras
  -- , template-haskell
  default-language: Haskell2010
  ghc-options:      -Wall

library
  import:           shared-deps
  exposed-modules:
    API.Endpoints
    API.Server
    Domain.Converter.Converter
    Domain.Converter.Type
    Domain.Converter.Units.ToDetails
    Domain.Converter.Units.ToDetailsSpec
    Domain.Converter.Units.ToPath
    Domain.Converter.Units.ToPathSpec
    Domain.Converter.Units.ToRawDetails
    Domain.Converter.Units.ToRawDetailsSpec
    Domain.Converter.Units.ToReaction
    Domain.Converter.Units.ToReactionSpec
    Domain.Service
    Infrastructure.Config
    Infrastructure.Database
    Infrastructure.QueryGenerator
    Models

  hs-source-dirs:   src
  default-language: Haskell2010

executable chemist
  import:           shared-deps
  main-is:          Main.hs
  build-depends:    chemist
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite chemist-test
  import:           shared-deps
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    chemist
