cabal-version: 3.6
name:          chemist
version:       0.1.0.0
synopsis:      Chemist 
author:        Λ
maintainer:    sobakavosne@gmail.com
category:      Database

common shared-deps
  build-depends:
    , aeson
    , async
    , base
    , bytestring
    , case-insensitive
    , containers
    , data-default
    , dotenv
    , extra
    , fast-logger
    , hasbolt
    , hspec
    , http-types
    , mtl
    , servant-server
    , text
    , time
    , wai
    , warp

  -- , hasbolt-extras
  -- , template-haskell
  default-language: Haskell2010
  ghc-options:      -Wall

library
  import:           shared-deps
  exposed-modules:
    API.Endpoints
    API.Error
    API.Logger
    API.Server
    Domain.Converter.Converter
    Domain.Converter.Helpers
    Domain.Converter.Instances
    Domain.Converter.Type
    Domain.Converter.Units.ToMechanismDetails
    Domain.Converter.Units.ToMechanismDetailsSpec
    Domain.Converter.Units.ToPath
    Domain.Converter.Units.ToPathSpec
    Domain.Converter.Units.ToRawReactionDetails
    Domain.Converter.Units.ToRawReactionDetailsSpec
    Domain.Converter.Units.ToReaction
    Domain.Converter.Units.ToReactionDetails
    Domain.Converter.Units.ToReactionDetailsSpec
    Domain.Converter.Units.ToReactionSpec
    Domain.Service
    Infrastructure.Config
    Infrastructure.Database
    Infrastructure.QueryGenerator
    Models

  hs-source-dirs:   src
  default-language: Haskell2010

executable chemist
  import:           shared-deps
  main-is:          Main.hs
  build-depends:    chemist
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite chemist-test
  import:           shared-deps
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  build-depends:    chemist
